# HerramientasComputacionales

./: Actividad_Limpieza_de_datos.ipynb  Analisis_evidencia.ipynb  Limpieza_evidencia.ipynb  README.md  bike_buyers.csv  bike_buyers_clean.csv  ejemplo kmeans.ipynb  hello.py  limpieza_de_datos.ipynb  miercoles.py  movies_clean.csv  pyproject.toml  qs-world-rankings-2025_clean.csv  videojuegos.ipynb  visualizacion.ipynb
